...
              updateState(InputType.text);
              widget.onTextFieldTap?.call();
            },
            child: CupertinoTextField(
              enableSuggestions: false,
              autocorrect: false,
              key: const Key('chat_message_input'),
              controller: _textController,
              focusNode: _inputFocusNode,
              maxLines: widget.maxLines,
              minLines: widget.minLines,
              maxLength: widget.maxLength,
              enableInteractiveSelection: true,
...
